# py-rt-model-inference

./: .gitlab-ci.yml  README.md  pyproject.toml
src/rt_model_inference/: __init__.py  __main__.py  certain_periodic.py  certain_sporadic.py  iterators.py  time.py  uncertain_periodic.py  uncertain_sporadic.py  validate.py
src/rt_model_inference/extractors/: __init__.py  certain_periodic.py  certain_sporadic.py  uncertain_periodic.py  uncertain_sporadic.py
tests/: test_certain_periodic.py  test_certain_sporadic.py  test_examples.py  test_iterators.py  test_periodic_traces.py  test_sporadic_traces.py  test_uncertain_periodic.py  test_uncertain_sporadic.py
tests/traces/periodic/: rust-p-10task_u30_mu22_ms_v12_task=03_period=13000000.csv  rust-p-10task_u30_mu22_ms_v13_task=07_period=16000000.csv  rust-p-10task_u30_mu22_ms_v40_task=05_period=88000000.csv  rust-p-10task_u30_mu22_ms_v45_task=07_period=10000000.csv  rust-p-10task_u30_mu22_ms_v47_task=07_period=41000000.csv  rust-p-10task_u30_mu22_ms_v49_task=07_period=37000000.csv  rust-p-10task_u30_mu22_ms_v51_task=08_period=23000000.csv  rust-p-10task_u30_mu22_ms_v67_task=07_period=36000000.csv  rust-p-10task_u30_mu22_ms_v69_task=01_period=16000000.csv  rust-p-10task_u30_mu22_ms_v71_task=02_period=8000000.csv  rust-p-10task_u30_mu22_ms_v74_task=09_period=84000000.csv  rust-p-10task_u30_mu7_ms_v10_task=09_period=93000000.csv  rust-p-10task_u30_mu7_ms_v22_task=00_period=28000000.csv  rust-p-10task_u30_mu7_ms_v22_task=03_period=4000000.csv  rust-p-10task_u30_mu7_ms_v22_task=04_period=13000000.csv  (+1108 more)
(+1000 files in other folders)
